# openapi.yaml
@@ -140,7 +140,7 @@ paths:
           description: The booking ID obtained in the list of bookings.
           required: true
           schema:
-            type: string
+            type: integer
       responses:
         "204":
           description: Booking cancelled successfully.
@@ -158,7 +158,7 @@ paths:
           description: The ID of the booking for which a guest has arrived.
           required: true
           schema:
-            type: string
+            type: integer
       requestBody:
         required: true
         content:
@@ -208,7 +208,7 @@ components:
       type: object
       properties:
         id:
-          type: string
+          type: integer
           description: The booking ID.
         start:
           type: string
@@ -229,6 +229,11 @@ components:
     CreateBookingRequest:
       type: object
       properties:
+        assetIds:
+          type: array
+          description: The IDs of the assets to be booked.
+          items:
+            type: integer
         organizerID:
           type: string
           description: The ID (email) of the organizer.
@@ -250,3 +255,4 @@ components:
         - organizerID
         - start
         - end
+        - assetIds
